# libkomparediff2

./: .kde-ci.yml  .reviewboardrc  CMakeLists.txt  COPYING  LibKompareDiff2Config.cmake.in  cvsdiffparser.cpp  cvsdiffparser.h  diff2export.h  difference.cpp  difference.h  differencestringpair.h  diffhunk.cpp  diffhunk.h  diffmodel.cpp  diffmodel.h  diffmodellist.cpp  diffmodellist.h  diffparser.cpp  diffparser.h  diffsettings.cpp  diffsettings.h  kompare.cpp  kompare.h  komparemodellist.cpp  komparemodellist.h  kompareprocess.cpp  kompareprocess.h  levenshteintable.h  marker.h  metainfo.yaml  parser.cpp  parser.h  parserbase.cpp  parserbase.h  perforceparser.cpp  perforceparser.h  settingsbase.cpp  settingsbase.h  stringlistpair.cpp
docs/: Doxyfile.local
po/af/: libkomparediff2.po
po/ar/: libkomparediff2.po
po/be/: libkomparediff2.po
po/bg/: libkomparediff2.po
po/br/: libkomparediff2.po
po/bs/: libkomparediff2.po
po/ca/: libkomparediff2.po
po/ca@valencia/: libkomparediff2.po
po/cs/: libkomparediff2.po
po/cy/: libkomparediff2.po
po/da/: libkomparediff2.po
po/de/: libkomparediff2.po
po/el/: libkomparediff2.po
po/en_GB/: libkomparediff2.po
po/eo/: libkomparediff2.po
po/es/: libkomparediff2.po
po/et/: libkomparediff2.po
po/eu/: libkomparediff2.po
po/fa/: libkomparediff2.po
po/fi/: libkomparediff2.po
po/fr/: libkomparediff2.po
po/ga/: libkomparediff2.po
po/gl/: libkomparediff2.po
po/he/: libkomparediff2.po
po/hi/: libkomparediff2.po
po/hne/: libkomparediff2.po
po/hr/: libkomparediff2.po
po/hu/: libkomparediff2.po
po/ia/: libkomparediff2.po
po/is/: libkomparediff2.po
po/it/: libkomparediff2.po
po/ja/: libkomparediff2.po
po/ka/: libkomparediff2.po
po/kk/: libkomparediff2.po
po/km/: libkomparediff2.po
po/ko/: libkomparediff2.po
po/lt/: libkomparediff2.po
po/lv/: libkomparediff2.po
po/mai/: libkomparediff2.po
po/mk/: libkomparediff2.po
po/mr/: libkomparediff2.po
po/ms/: libkomparediff2.po
po/nb/: libkomparediff2.po
po/nds/: libkomparediff2.po
po/ne/: libkomparediff2.po
po/nl/: libkomparediff2.po
po/nn/: libkomparediff2.po
po/oc/: libkomparediff2.po
po/pa/: libkomparediff2.po
po/pl/: libkomparediff2.po
po/pt/: libkomparediff2.po
po/pt_BR/: libkomparediff2.po
po/ro/: libkomparediff2.po
po/ru/: libkomparediff2.po
po/sa/: libkomparediff2.po
po/se/: libkomparediff2.po
po/sk/: libkomparediff2.po
po/sl/: libkomparediff2.po
po/sq/: libkomparediff2.po
po/sr/: libkomparediff2.po
po/sr@ijekavian/: libkomparediff2.po
po/sr@ijekavianlatin/: libkomparediff2.po
po/sr@latin/: libkomparediff2.po
po/sv/: libkomparediff2.po
po/ta/: libkomparediff2.po
po/tg/: libkomparediff2.po
po/tr/: libkomparediff2.po
po/ug/: libkomparediff2.po
po/uk/: libkomparediff2.po
po/xh/: libkomparediff2.po
po/zh_CN/: libkomparediff2.po
po/zh_TW/: libkomparediff2.po
src/: CMakeLists.txt  KompareDiff2Config.cmake.in  LibKompareDiff2Config.cmake.in  cvsdiffparser.cpp  cvsdiffparser.h  difference.cpp  difference.h  difference_p.h  differencestring.cpp  differencestring.h  differencestring_p.h  differencestringpair.h  diffhunk.cpp  diffhunk.h  diffhunk_p.h  diffmodel.cpp  diffmodel.h  diffmodel_p.cpp  diffmodel_p.h  diffmodellist.cpp  diffmodellist.h  diffparser.cpp  diffparser.h  diffsettings.cpp  diffsettings.h  global.h  info.cpp  info.h  kompare.cpp  kompare.h  komparemodellist.cpp  komparemodellist.h  kompareprocess.cpp  kompareprocess.h  levenshteintable.h  libkomparediff2-index.qdoc  libkomparediff2.qdoc  libkomparediff2.qdocconf  marker.h  modellist.cpp  (+13 more)
src/compat/: diff2_export.h  diff2_export_p.h  header.h.in
tests/: CMakeLists.txt  interactivedifftest.cpp  interactivedifftest.h  levenshteintest.cpp  levenshteintest.h
